--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,44 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>Angular1.5-user-endpoint</title>
+    <meta charset="utf-8" />
+    <link href="css/app.min.css" rel="stylesheet" />
 </head>
 <body>
-
+    <div class="app" ng-app="app">
+        <header>
+            <div class="container"><h1>APP</h1></div>
+        </header>
+        <main>
+            <div id="headline">
+                <div class="container">
+                    <h2>USER LIST</h2>
+                </div>
+            </div>
+            <div class="container">
+                <section id="actionButtons">
+                    <button>ADD USER</button>
+                </section>
+                <div id="userList">
+                    <table cellpadding="0" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <td>ID</td>
+                                <td>Email</td>
+                                <td>Username</td>
+                                <td>First Name</td>
+                                <td>Last Name</td>
+                                <td>User type</td>
+                                <td>Company</td>
+                                <td>Actions</td>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                    </table>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
